nvidia-common (20101220+0) UNRELEASED; urgency=low

  [ Andreas Beckmann ]
  * Rename source package to nvidia-common.

 -- Andreas Beckmann <debian@abeckmann.de>  Mon, 20 Dec 2010 12:50:48 +0100

nvidia-kernel-common (20100522+2) unstable; urgency=low

  [ Andreas Beckmann ]
  * Switch to dpkg-maintscript-helper for renaming config files.
  * Put the common rename/remove conffile code fragment into
    debian/nvidia-kernel-common.dpkg-maintscript-helper and copy it to
    {preinst,postinst,postrm}.debhelper.
  * Add Vcs-* URLs.
  * Update Standards-Version to 3.9.1, no changes needed.
  * Switch to debhelper compat level 8.

  [ Russ Allbery ]
  * Add Andreas Beckmann to Uploaders.

 -- Russ Allbery <rra@debian.org>  Sat, 18 Sep 2010 15:41:33 -0700

nvidia-kernel-common (20100522+1) unstable; urgency=low

  [ Andreas Beckmann ]
  * Remove Randall Donald from Uploaders per his request.
  * Add Russ Allbery to Uploaders.
  * Blacklist the nouveau kernel module. (Closes: #580894)
  * Simplify package build.
  * Rename modprobe config to nvidia-kernel-common.conf and use
    dh_installmodules for installation.
  * Adjust transition code in maintainer scripts to take cake of both old
    names nvidia-kernel-nkc and nvidia-kernel-nkc.conf.

  [ Russ Allbery ]
  * Expand the package long description.
  * Rewrite debian/copyright in the DEP-5 format and clarify that the
    package is licensed under the GPL version 2 or later.  Add the
    Policy-requested disclaimer explaining why the package is in contrib.

 -- Russ Allbery <rra@debian.org>  Sat, 22 May 2010 19:45:36 -0700

nvidia-kernel-common (20100216+3+nmu1) unstable; urgency=critical

  [ Jean-Christophe Dubacq ]
  * Non-maintainer upload.
  * fix security bug for console users (closes: #574255)

  [ Vincent Danjean ]
  * Non-maintainer upload.
  * Upload to delayed-2 queue

 -- Vincent Danjean <vdanjean@debian.org>  Wed, 24 Mar 2010 06:35:53 +0100

nvidia-kernel-common (20100216+3) unstable; urgency=low
