@@ -4,10 +4,21 @@ Priority: optional
 Maintainer: Debian NVIDIA Maintainers <pkg-nvidia-devel@lists.alioth.debian.org>
 Uploaders: Russ Allbery <rra@debian.org>,
  Andreas Beckmann <debian@abeckmann.de>
-Build-Depends: debhelper (>= 8)
+Build-Depends: debhelper (>= 8), po-debconf
 Standards-Version: 3.9.1
 Vcs-Svn: svn://svn.debian.org/pkg-nvidia/packages/nvidia-kernel-common/trunk
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-nvidia/packages/nvidia-kernel-common/
+
+Package: nvidia-common
+Architecture: amd64 i386
+Depends: debconf, ${misc:Depends}
+Description: NVIDIA binary graphics driver support files
+ This package contains support files needed for all Debian packages of
+ NVIDIA graphics drivers and related software.  It takes care that no old
+ installation of the drivers that was done with the nvidia-installer
+ remains on the system as this will conflict with the packages drivers.
+ Furthermore using the nvidia-installer to install a new version of the
+ drivers is prevented as long as this package is installed.
 
 Package: nvidia-kernel-common
 Section: contrib/kernel
