@@ -1,1 +1,1 @@
-debian/pre-install	usr/lib/nvidia/
+pre-install	usr/lib/nvidia/
