@@ -1,0 +1,1 @@
+[type: gettext/rfc822deb] nvidia-common.templates
